--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,9 +1,97 @@
+@import 'vars'
+
 *, *::after, *::before
 	box-sizing: border-box
 
 
+input, input:focus, select, select:focus, button, button:focus, button:active, a, a:focus
+	outline: none !important
+	border: none
+
+
+.navbar-toggler
+	outline: none !important
+
 body
 	margin: 0
-	border: 1px solid red
+	font-family: 'Oswald', sans-serif
+	background-color: $green
+	color: $dark
+	overflow-x: hidden
+	padding-bottom: 100px
+	
+
+.navbar
+	background-color: $dark !important
+	padding: 2px 0 !important
 
 
+main.container
+	margin-top: 40px
+
+.navbar-dark .navbar-toggler
+	border: none !important
+	color: transparent !important
+
+
+.aside-close img 
+	max-width: 32px
+	cursor: pointer
+
+.aside-form .row
+	display: flex
+	justify-content: space-between
+	margin-top: 20px
+	margin-bottom: 20px
+
+.aside-form .row .col-md-6:first-child
+	padding-right: 7px
+
+.aside-form .row .col-md-6:last-child
+	padding-left: 7px	
+
+.aside-close
+	margin-bottom: 20px
+
+.aside
+	position: absolute
+	top: 0
+	width: 440px
+	height: 100%
+	z-index: 20
+	right: -480px
+	transition: 700ms ease-in
+	background-color: $dark
+	border-left: 1px solid #444
+
+.aside-popup
+	margin-top: 20px
+	padding-left: 40px
+	padding-right: 40px
+
+#btn
+	width: 100%
+	background-color: $green
+	color: $dark
+	transition: 150ms ease-in-out
+	padding: 12px 15px
+	border-radius: 6px
+	cursor: pointer
+	&:hover
+		box-shadow: 0 0 7px $green
+
+
+
+.name, .date, .select
+	padding: 12px 15px
+	width: 100%
+	border-radius: 6px
+	border: none
+	background-color: $dark
+	border: 1px solid $green
+	color: $green
+	&::placeholder
+		color: $green
+
+.name:focus, .date:focus, .select:focus
+	border: 1px solid $green !important
